--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Lettz" />
+    <meta name="apple-mobile-web-app-title" content="Joggr" />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     
     <!-- Primary Meta Tags -->
